tests/src/frontend/typechecking/invalid/mutable_class_2.sk
class Foo()

fun main(): void {
  _f = mutable Foo();
  print_raw("No")
}
